@@ -1,8 +1,14 @@
+2000-04-26  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSHost.m: Improve logging of host/net configuration errors
+	* Source/GSTcpPort.m: ditto
+	* Source/TcpPort.m: ditto
+
 2000-04-25  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSBundle.m (+initialize): retain _executable_path.
 
-2000-04-23  Richard Frith-Macdonald <rfm@gnu.org>
+2000-04-25  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSAttributedString.m: Optimised - cache method implementations
 	wherever possible in order to avoid objc runtime overheads.
